moved some standard aliases out of defaults.cfg
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3210 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -6,50 +6,13 @@ loadcrosshair default.png	// Choose another crosshair, see packages/misc/crossha
 skin 0				// Change your look.
 autoreload 1			// Reload the guns automatically by default.
 
-alias primary [ weapon (currentprimary) ]
-alias secondary [ weapon 1 ]
-alias melee [ weapon 0 ]
-alias grenades [ weapon 6 ]
-
-//for alternative weapon binding (more economic) see the end of this file
-
 lighterror 4 //set higher (for example 8) if you experience slowdown
 
-alias altaction [
-	(concatword altaction_ (curweapon))
-]
-
-alias quicknadethrow [ 
-	if (> (magcontent 6) 0) [
-        if (!= (curweapon) 6) [grenades]
-		attack
-    ]
-	onrelease [ sleep 1 [ if (= (curweapon) 6) [weapon (prevweapon)] ] ]
-]
-
-loop i 8 [ alias (concatword altaction_ $i) quicknadethrow ] // quick nade throw is default
-alias altaction_4 [ zoom 1; onrelease [ zoom 0 ] ] // sniper
-alias altaction_6 [ attack ] // grenade 
-
-// NOTE: by default this zoom script just divides your sensitivity by 2 while you use the scope
+// NOTE: by default the zoom script just divides your sensitivity by 2 while you use the scope
 // if you want to set your own value for it, go to the following line and 
 // replace (div $sensitivity 2) by your desired sensitivity value:
 
-alias scopesens (div $sensitivity 2)
-alias oldsens $sensitivity
-
-alias zoom [ 
-	if (= $arg1 1) [
-		if (= $sensitivity $scopesens) [] [
-			alias oldsens $sensitivity
-			sensitivity $scopesens
-			setscope  1
-		]
-    ] [
-		sensitivity $oldsens
-		setscope 0
-	]
-]
+alias scopesens [div $sensitivity 2]
 
 //bind MOUSE2 [ zoom 1; onrelease [ zoom 0 ] ]
 
@@ -57,60 +20,11 @@ alias zoom [
 //alias ztoggle 0
 //bind MOUSE2 [ alias ztoggle (= ztoggle 0); zoom $ztoggle ]
 
-alias votemap [ mode $arg1; map $arg2 ]
-
-alias tdm   [ votemap 0 $arg1 ]
-alias coop  [ votemap 1 $arg1 ]
-alias dm    [ votemap 2 $arg1 ]
-alias lms   [ votemap 3 $arg1 ]
-alias ts    [ votemap 4 $arg1 ]
-alias ctf   [ votemap 5 $arg1 ]
-alias pf    [ votemap 6 $arg1 ]
-alias lss   [ votemap 9 $arg1 ] 
-alias osok  [ votemap 10 $arg1 ]
-alias tosok [ votemap 11 $arg1 ]
-alias htf   [ votemap 13 $arg1 ]
-alias vip   [ votemap 13 $arg1 ]
-alias tktf  [ votemap 14 $arg1 ]
-alias ktf   [ votemap 15 $arg1 ]
-
-
-//--------------------- editing -------------------------------
-
-// The below is for editing using your mouse wheel. See the page 1 of the 
-// map editing guide for details on what's used for what.
-
-alias modifier 0
-alias domodifier [ alias modifier $arg1; onrelease [ alias modifier 0 ] ]
-
-alias universaldelta [
-  if $editing [ alias s "edit" ] [ 
-    if (alive) [ alias s "game" ] [ alias s "spect" ]
-  ]
-  (concatword delta _ $s _ $modifier)
-]
-
-alias delta_edit_0 [ editheight $flrceil $arg1 ]
-alias delta_edit_1 [ if $flrceil [ vdelta $arg1 ] [ vdelta (- 0 $arg1) ] ]
-alias delta_edit_2 [ edittex $flrceil $arg1 ]
-alias delta_edit_3 [ edittex (+ $flrceil 1) $arg1 ]
-alias delta_edit_4 [ equalize $flrceil ]
-alias delta_edit_5 [ entproperty 0 $arg1 ] 
-// End of using your mouse to edit
-// ------------------------------
-
-alias delta_game_0 [ if (= $arg1 1) [ shiftweapon 1 ] [ shiftweapon -1 ] ]
-alias delta_spect_0 [ changefollowplayer $arg1 ]
-
-// alternative weapon switching, no more 1-2-3-4 /wheel cycling no finger ever leaving WASD
+// alternative weapon switching (more economic), no more 1-2-3-4 /wheel cycling no finger ever leaving WASD
 // uncomment lines (remove the //) below to activate
 
 //alias delta_game_0 [ if (= $arg1 1) [ primary ] [ secondary ] ]
 //bind lshift "grenades"
 //bind lalt "melee"
-
-alias toggleshowmap [ showmap 1; onrelease [ showmap 0 ] ]
-
-alias mapstartonce [ ]
 
 alias askquit 1
