--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -46,3 +46,90 @@ alias resetbinds [ exec config/resetbinds.cfg; echo "3All binds have been reset
 // "changeteam" command.
 alias changeteam [ if (= (curteam) 1) [ team CLA; echo "You are now on team 3CLA" ] [ team RVSF; echo "You are now on team 1RVSF" ] ]
 
+// Mode/map-setting aliases.
+
+alias votemap [ mode $arg1; map $arg2 ]
+
+alias tdm   [ votemap 0 $arg1 ]
+alias coop  [ votemap 1 $arg1 ]
+alias dm    [ votemap 2 $arg1 ]
+alias lms   [ votemap 3 $arg1 ]
+alias ts    [ votemap 4 $arg1 ]
+alias ctf   [ votemap 5 $arg1 ]
+alias pf    [ votemap 6 $arg1 ]
+alias lss   [ votemap 9 $arg1 ]
+alias osok  [ votemap 10 $arg1 ]
+alias tosok [ votemap 11 $arg1 ]
+alias htf   [ votemap 13 $arg1 ]
+alias vip   [ votemap 13 $arg1 ]
+alias tktf  [ votemap 14 $arg1 ]
+alias ktf   [ votemap 15 $arg1 ]
+
+// Weapon switching/action utilities.
+
+alias primary [ weapon (currentprimary) ]
+alias secondary [ weapon 1 ]
+alias melee [ weapon 0 ]
+alias grenades [ weapon 6 ]
+
+alias altaction [
+    (concatword altaction_ (curweapon))
+]
+
+alias quicknadethrow [
+    if (> (magcontent 6) 0) [
+        if (!= (curweapon) 6) [grenades]
+        attack
+    ]
+    onrelease [ sleep 1 [ if (= (curweapon) 6) [weapon (prevweapon)] ] ]
+]
+
+loop i 8 [ alias (concatword altaction_ $i) quicknadethrow ] // quick nade throw is default
+alias altaction_4 [ zoom 1; onrelease [ zoom 0 ] ] // sniper
+alias altaction_6 [ attack ] // grenade 
+
+alias oldsens $sensitivity
+
+alias zoom [
+    if (= $arg1 1) [
+        if (= $sensitivity $scopesens) [] [
+            alias oldsens $sensitivity
+            sensitivity (scopesens)
+            setscope  1
+        ]
+    ] [
+        sensitivity $oldsens
+        setscope 0
+    ]
+]
+
+//--------------------- editing -------------------------------
+
+// The below is for editing using your mouse wheel. See the page 1 of the 
+// map editing guide for details on what's used for what.
+
+alias modifier 0
+alias domodifier [ alias modifier $arg1; onrelease [ alias modifier 0 ] ]
+
+alias universaldelta [
+  if $editing [ alias s "edit" ] [
+    if (alive) [ alias s "game" ] [ alias s "spect" ]
+  ]
+  (concatword delta _ $s _ $modifier)
+]
+
+alias delta_edit_0 [ editheight $flrceil $arg1 ]
+alias delta_edit_1 [ if $flrceil [ vdelta $arg1 ] [ vdelta (- 0 $arg1) ] ]
+alias delta_edit_2 [ edittex $flrceil $arg1 ]
+alias delta_edit_3 [ edittex (+ $flrceil 1) $arg1 ]
+alias delta_edit_4 [ equalize $flrceil ]
+alias delta_edit_5 [ entproperty 0 $arg1 ]
+// End of using your mouse to edit
+// ------------------------------
+
+alias delta_game_0 [ if (= $arg1 1) [ shiftweapon 1 ] [ shiftweapon -1 ] ]
+alias delta_spect_0 [ changefollowplayer $arg1 ]
+
+// HUD toggles
+alias toggleshowmap [ showmap 1; onrelease [ showmap 0 ] ]
+
