--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -52,13 +52,29 @@ menuitem "" -1
 menuitem "RVSF CTF Flag"	"newent ctf-flag 1"
 menuitem "CLA CTF Flag"		"newent ctf-flag 0"
 menuitem "" -1
-menuitem "Ladder entity"	"saycommand /newent ladder "
+menuitem "Ladder entity"	"saycommand /newent ladder " [ echo "Ensure that you have placed the ladder mapmodel first (found in the mapmodels menu)..." ]
+menuitem "Clip entity"		"showmenu Clips" "echo Clips can be used to block off areas that players shouldn't be able to access..."
+
+
+alias clip01 1
+alias clip02 1
+alias clip03 1
+alias clip04 1
+
+newmenu "Clips"
+
+menuitemslider "Elevation from ground: " 1 50 " " 1 "" "alias clip01 $arg1"
+menuitemslider "Length of clip	(X): " 1 50 " " 1 "" "alias clip02 $arg1"
+menuitemslider "Width of clip	(Y): " 1 50 " " 1 "" "alias clip03 $arg1"
+menuitemslider "Height of clip	(Z): " 1 50 " " 1 "" "alias clip04 $arg1"
+menuitem "" -1
+menuitem "2		[ OK ]		" "newent clip $clip01 $clip02 $clip03 $clip04"
 
 //Pickups menu
 newmenu Pickups
 
 menuitem "Health"		"newent health"
-menuitem "Pistol Magazine"	"newent pistol"
+menuitem "Pistol Magazine"	"newent clips"
 menuitem "Box of Ammo"		"newent ammobox"
 menuitem "Kevlar Vest"		"newent armour"
 menuitem "Akimbo"		"newent akimbo"
@@ -110,7 +126,7 @@ menuitemslider "Red pigment: " 1 255 " " 5 "" "alias redw $arg1"
 menuitemslider "Green pigment: " 1 255 " " 5 "" "alias greenw $arg1"
 menuitemslider "Blue pigment: " 1 255 " " 5 "" "alias bluew $arg1"
 menuitem "" -1
-menuitem "2		[ OK ]		" "saycommand watercolour $redw $greenw $bluew"
+menuitem "2		[ OK ]		" "watercolour $redw $greenw $bluew"
 
 //Mapmodels
 newmenu Mapmodels
