changeteam message waits for success
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3212 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -44,7 +44,10 @@ gamemodedesc 15 [Keep the Flag: Get the flag and keep it. You score one point ev
 alias resetbinds [ exec config/resetbinds.cfg; echo "3All binds have been reset to default values!" ]
 
 // "changeteam" command.
-alias changeteam [ if (= (curteam) 1) [ team CLA; echo "You are now on team 3CLA" ] [ team RVSF; echo "You are now on team 1RVSF" ] ]
+alias changeteam [
+         if (= (curteam) 1) [ team CLA ] [ team RVSF ]
+         sleep 1000 [ if (= (curteam) 0) [ echo "You are now on team 3CLA" ] [ echo "You are now on team 1RVSF" ] ]
+         ]
 
 // Mode/map-setting aliases.
 
