--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -22,8 +22,8 @@ alias wlight1 1
 
 newmenu "White light"
 
-menuitemslider "Light radius: " 1 32 " " 1 "" "alias wlight $arg1"
-menuitemslider "Brightness: " 1 255 " " 5 "" "alias wlight1 $arg1"
+menuitemslider "Light radius: " 1 32 "$wlight" 1 "" "alias wlight $arg1"
+menuitemslider "Brightness: " 1 255 "$wlight1" 5 "" "alias wlight1 $arg1"
 menuitem "" -1
 menuitem "2		[ OK ]		" "newent light $wlight $wlight1"
 
@@ -34,11 +34,11 @@ alias clight3 1
 
 newmenu "Coloured light"
 
-menuitemslider "Light radius: " 1 32 " " 1 "" "alias clight $arg1"
+menuitemslider "Light radius: " 1 32 "$clight" 1 "" "alias clight $arg1"
 menuitem "" -1
-menuitemslider "Red light: " 1 255 " " 5 "" "alias clight1 $arg1"
-menuitemslider "Green light: " 1 255 " " 5 "" "alias clight2 $arg1"
-menuitemslider "Blue light: " 1 255 " " 5 "" "alias clight3 $arg1"
+menuitemslider "Red light: " 1 255 "$clight1" 5 "" "alias clight1 $arg1"
+menuitemslider "Green light: " 1 255 "$clight2" 5 "" "alias clight2 $arg1"
+menuitemslider "Blue light: " 1 255 "$clight3" 5 "" "alias clight3 $arg1"
 menuitem "" -1
 menuitem "2		[ OK ]		" "newent light $clight $clight1 $clight2 $clight3"
 
@@ -63,10 +63,10 @@ alias clip04 1
 
 newmenu "Clips"
 
-menuitemslider "Elevation from ground: " 1 50 " " 1 "" "alias clip01 $arg1"
-menuitemslider "Length of clip	(X): " 1 50 " " 1 "" "alias clip02 $arg1"
-menuitemslider "Width of clip	(Y): " 1 50 " " 1 "" "alias clip03 $arg1"
-menuitemslider "Height of clip	(Z): " 1 50 " " 1 "" "alias clip04 $arg1"
+menuitemslider "Elevation from ground: " 1 50 "$clip01" 1 "" "alias clip01 $arg1"
+menuitemslider "Length of clip	(X): " 1 50 "$clip02" 1 "" "alias clip02 $arg1"
+menuitemslider "Width of clip	(Y): " 1 50 "$clip03" 1 "" "alias clip03 $arg1"
+menuitemslider "Height of clip	(Z): " 1 50 "$clip04" 1 "" "alias clip04 $arg1"
 menuitem "" -1
 menuitem "2		[ OK ]		" "newent clip $clip01 $clip02 $clip03 $clip04"
 
@@ -122,9 +122,9 @@ alias bluew 1
 
 newmenu "Water colour"
 
-menuitemslider "Red pigment: " 1 255 " " 5 "" "alias redw $arg1"
-menuitemslider "Green pigment: " 1 255 " " 5 "" "alias greenw $arg1"
-menuitemslider "Blue pigment: " 1 255 " " 5 "" "alias bluew $arg1"
+menuitemslider "Red pigment: " 1 255 "$redw" 5 "" "alias redw $arg1"
+menuitemslider "Green pigment: " 1 255 "$greenw" 5 "" "alias greenw $arg1"
+menuitemslider "Blue pigment: " 1 255 "$bluew" 5 "" "alias bluew $arg1"
 menuitem "" -1
 menuitem "2		[ OK ]		" "watercolour $redw $greenw $bluew"
 
