team change happens immediately
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3215 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -45,9 +45,9 @@ alias resetbinds [ exec config/resetbinds.cfg; echo "3All binds have been reset
 
 // "changeteam" command.
 alias changeteam [
-         if (= (curteam) 1) [ team CLA ] [ team RVSF ]
-         sleep 1000 [ if (= (curteam) 0) [ echo "You are now on team 3CLA" ] [ echo "You are now on team 1RVSF" ] ]
-         ]
+    if (= (curteam) 1) [ team CLA ] [ team RVSF ]
+    if (= (curteam) 0) [ echo "You are now on team 3CLA" ] [ echo "You are now on team 1RVSF" ]
+]
 
 // Mode/map-setting aliases.
 
