Removed mapmsg menutextinput due to character limit. Fixed up spacing of menus here/there... etc etc
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3218 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -40,7 +40,7 @@ menuitemslider "Red light: " 1 255 "$clight1" 5 "" "alias clight1 $arg1"
 menuitemslider "Green light: " 1 255 "$clight2" 5 "" "alias clight2 $arg1"
 menuitemslider "Blue light: " 1 255 "$clight3" 5 "" "alias clight3 $arg1"
 menuitem "" -1
-menuitem "2		[ OK ]		" "newent light $clight $clight1 $clight2 $clight3"
+menuitem "2		[ OK ]" "newent light $clight $clight1 $clight2 $clight3"
 
 //Entities menu
 newmenu Entities
@@ -56,19 +56,19 @@ menuitem "Ladder entity"	"saycommand /newent ladder " [ echo "Ensure that you ha
 menuitem "Clip entity"		"showmenu Clips" "echo Clips can be used to block off areas that players shouldn't be able to access..."
 
 
-alias clip01 1
-alias clip02 1
-alias clip03 1
-alias clip04 1
+alias clip01 0
+alias clip02 0
+alias clip03 0
+alias clip04 0
 
 newmenu "Clips"
 
-menuitemslider "Elevation from ground: " 1 50 "$clip01" 1 "" "alias clip01 $arg1"
-menuitemslider "Length of clip	(X): " 1 50 "$clip02" 1 "" "alias clip02 $arg1"
-menuitemslider "Width of clip	(Y): " 1 50 "$clip03" 1 "" "alias clip03 $arg1"
-menuitemslider "Height of clip	(Z): " 1 50 "$clip04" 1 "" "alias clip04 $arg1"
+menuitemslider "Elevation from ground: " 0 50 "$clip01" 1 "" "alias clip01 $arg1"
+menuitemslider "Length of clip	(X): " 0 50 "$clip02" 1 "" "alias clip02 $arg1"
+menuitemslider "Width of clip	(Y): " 0 50 "$clip03" 1 "" "alias clip03 $arg1"
+menuitemslider "Height of clip	(Z): " 0 50 "$clip04" 1 "" "alias clip04 $arg1"
 menuitem "" -1
-menuitem "2		[ OK ]		" "newent clip $clip01 $clip02 $clip03 $clip04"
+menuitem "2		     [ OK ]" "newent clip $clip01 $clip02 $clip03 $clip04"
 
 //Pickups menu
 newmenu Pickups
@@ -107,14 +107,9 @@ newmenu "Map operations"
 menuitem "Newmap (128x128 cubes - recommended)"	"newmap 7"
 menuitem "Newmap (256x256 cubes)"		"newmap 8"
 menuitem "Increase mapsize (2x)"		[ mapenlarge; echo "The map size has been increased by 2. However, the new space is solid. To utilize it, you will need to turn it into space, by selecting it and pressing G" ]
-menuitem "Create a map message"			[ showmenu "Map message" ]
+menuitem "Create a map message"			[ saycommand /mapmsg ]
 menuitem "Change waterlevel"			"saycommand /waterlevel "
 menuitem "Change watercolour"			[ showmenu "Water colour" ]
-
-newmenu "Map message"
-menuinit [ alias mapmsgtext ""; echo "1To create a message that will show on your map upon load, enter it below and then press OK..." ]
-menuitemtextinput "Your map message:  " "" "alias mapmsgtext $arg1"
-menuitem "2			[ OK ]				" [ mapmsg $mapmsgtext ]
 
 alias redw 1
 alias greenw 1
@@ -126,7 +121,7 @@ menuitemslider "Red pigment: " 1 255 "$redw" 5 "" "alias redw $arg1"
 menuitemslider "Green pigment: " 1 255 "$greenw" 5 "" "alias greenw $arg1"
 menuitemslider "Blue pigment: " 1 255 "$bluew" 5 "" "alias bluew $arg1"
 menuitem "" -1
-menuitem "2		[ OK ]		" "watercolour $redw $greenw $bluew"
+menuitem "2		   [ OK ]" "watercolour $redw $greenw $bluew"
 
 //Mapmodels
 newmenu Mapmodels
