--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -9,7 +9,6 @@ menuitem "A-ARD/10 Submachine Gun"		"nextprimary 3;echo A-ARD/10 Submachine Gun 
 menuitem "Precision Tech AD-81 Sniper Rifle"     "nextprimary 4;echo Precision Tech AD-81 Sniper Rifle selected" "chmenumdl Weapons weapons/sniper/menu mapmodel 75 12"
 menuitem "V-19 Combat Shotgun"			"nextprimary 2;echo V-19 Combat Shotgun selected" "chmenumdl Weapons weapons/shotgun/menu mapmodel 75 12"
 
-
 newmenu CLA
 
 menumdl playermodels/CLA/01 all 50 4
@@ -42,14 +41,14 @@ menuitem "Reset all settings"                          [ showmenu "Reset setting
 
 newmenu "QUICK setup"
 
-menuitemtextinput "Nickname:  " 		"" "name $arg1"
-menuitemtextinput "Resolution (Width):  " "$scr_w" "scr_w $arg1"
-menuitemtextinput "Resolution (Height):  " "$scr_h" "scr_h $arg1"
+menuitemtextinput "Nickname:			" 		"" "name $arg1"
+menuitemtextinput "Resolution (Width):		" "$scr_w" "scr_w $arg1"
+menuitemtextinput "Resolution (Height):		" "$scr_h" "scr_h $arg1"
 menuitemslider "Mouse sensitivity: " 2 150 "($sensitivity)" 2 "" "sensitivity $arg1"
-menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
-menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "low medium high" "new_sound_quality $arg1"
+menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 "Low Medium Good Best" "new_gfx_quality $arg1"
+menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "Low Medium High" "new_sound_quality $arg1"
 menuitem "" -1
-menuitem "2			 [ OK ] 			" "resetgl"
+menuitem "2		     [ OK ]" "resetgl"
 
 alias getgfxq [
     if (= $minlod 200) [ result 4 ] [
@@ -173,7 +172,7 @@ menuitem "2   	  [ Apply! ]		" [ if $resetyes [ resesresetcfg 1; quit ] [ showm
 
 newmenu controls
 
-menuitem "Select an action below and press ENTER to change to a new key" -1
+menuitem "Select an action and press ENTER to bind a new key:" -1
 menuitem "" -1
 menuitemkeyinput "Forwards: "        forward
 menuitemkeyinput "Left: "           left
@@ -209,10 +208,10 @@ menuitem "2   	  [ Apply! ]		" [ if $resetbindsyes [ resetbinds ] [ showmenu ""
 
 newmenu video
 
-menuitemtextinput "Screen width: " "$scr_w" "scr_w $arg1"
-menuitemtextinput "Screen height: " "$scr_h" "scr_h $arg1"
+menuitemtextinput "Screen width:			" "$scr_w" "scr_w $arg1"
+menuitemtextinput "Screen height:			" "$scr_h" "scr_h $arg1"
 
-menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
+menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 "Low Medium Good Best" "new_gfx_quality $arg1"
 menuitem "" -1
 
 menuitemslider "View of field: " 90 120 "$fov" 2 "" "fov $arg1"
@@ -234,12 +233,12 @@ alias fsaa_valuemap "-1 2 4 8 16"
 menuitemslider "Antialiasing (FSAA): " 0 4 "(findlist $fsaa_valuemap $fsaa)" 1 "off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
 
 alias minlod_valuemap "25 60 100 250"
-menuitemslider "Minimal level of detail: " 0 3 "(findlist $minlod_valuemap $minlod)" 1 ["low" "decent" "good" "best"] "minlod (at $minlod_valuemap $arg1)"
+menuitemslider "Minimal level of detail: " 0 3 "(findlist $minlod_valuemap $minlod)" 1 ["Low" "Decent" "Good" "Best"] "minlod (at $minlod_valuemap $arg1)"
 menuitemslider "Light error: " 1 100 "$lighterror" 5 "" "lighterror $arg1"
 
 alias watersubdiv_valuemap "16 8 4 2 1"
-menuitemslider "Water subdivision: " 0 4 "(findlist $watersubdiv_valuemap $watersubdiv)" 1 ["lowest quality" "low quality" "medium quality" "high quality" "highest quality"] "watersubdiv (at $watersubdiv_valuemap $arg1)"
-menuitemslider "Dynamic shadows: " 0 2 [getshadowq] 1 ["off" "blob" "stencil"] [setshadowq $arg1]
+menuitemslider "Water subdivision: " 0 4 "(findlist $watersubdiv_valuemap $watersubdiv)" 1 ["Lowest quality" "Low quality" "Medium quality" "High quality" "Highest quality"] "watersubdiv (at $watersubdiv_valuemap $arg1)"
+menuitemslider "Dynamic shadows: " 0 2 [getshadowq] 1 ["Off" "Blob" "Stencil"] [setshadowq $arg1]
 menuitemcheckbox "Water reflection: " "$waterreflect" "waterreflect $arg1"
 
 getshadowq = [
@@ -291,7 +290,7 @@ newmenu sound
 
 menuitemslider "Sound volume: " 0 255 "$soundvol" 16 "" "soundvol $arg1"
 menuitemslider "Music volume: " 0 255 "$musicvol" 16 "" "musicvol $arg1"
-menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "low medium high" "new_sound_quality $arg1"
+menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "Low Medium High" "new_sound_quality $arg1"
 menuitem "" -1
 menuitem "Advanced settings..." [ showmenu "Advanced settings" ]
 
@@ -304,8 +303,9 @@ menuitemcheckbox "Bullet near-miss: " "$bulletairsound" "bulletairsound $arg1"
 
 newmenu gameplay
 
-menuitemtextinput "Nickname: " "result $curname" "name $arg1"
+menuitemtextinput "Nickname:			 " "result $curname" "name $arg1"
 menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [Normal "Colored vests" "Full color"] "teamdisplaymode $arg1"
+menuitem "" -1
 menuitem "Change to the enemy team" "changeteam"
 menuitem "Change weapon"        "showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
