don't set FSAA in graphics slider (to avoid complaints)
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3219 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -66,7 +66,7 @@ alias getsoundq [
 
 alias new_gfx_quality [
     if (= $arg1 4) [ // highest gfx quality
-        fsaa 4
+        //fsaa 4
         minlod 200
         fpsrange 100 1000
         watersubdiv 2
@@ -82,7 +82,7 @@ alias new_gfx_quality [
         shotline 1
     ] [
         if (= $arg1 3) [ // high
-            fsaa 0
+            //fsaa 0
             minlod 100
             fpsrange 60 60
             watersubdiv 2
@@ -98,7 +98,7 @@ alias new_gfx_quality [
             shotline 1
         ] [
             if (= $arg1 2) [ // medium (DEFAULT)
-                fsaa 0
+                //fsaa 0
                 minlod 60
                 fpsrange 30 40
                 watersubdiv 4
@@ -122,7 +122,7 @@ alias new_gfx_quality [
                 gib 1
                 shotline 1
             ] [                 // low
-                fsaa 0
+                //fsaa 0
                 minlod 25
                 fpsrange 20 25
                 watersubdiv 16
