--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -45,7 +45,7 @@ menuitemtextinput "Nickname:			" 		"" "name $arg1"
 menuitemtextinput "Resolution (Width):		" "$scr_w" "scr_w $arg1"
 menuitemtextinput "Resolution (Height):		" "$scr_h" "scr_h $arg1"
 menuitemslider "Mouse sensitivity: " 2 150 "($sensitivity)" 2 "" "sensitivity $arg1"
-menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 "Low Medium Good Best" "new_gfx_quality $arg1"
+menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 [Low Medium Good "Best (but slow)"] "new_gfx_quality $arg1"
 menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "Low Medium High" "new_sound_quality $arg1"
 menuitem "" -1
 menuitem "2		     [ OK ]" "resetgl"
@@ -66,7 +66,7 @@ alias getsoundq [
 
 alias new_gfx_quality [
     if (= $arg1 4) [ // highest gfx quality
-        //fsaa 4
+        fsaa 4
         minlod 200
         fpsrange 100 1000
         watersubdiv 2
@@ -82,7 +82,7 @@ alias new_gfx_quality [
         shotline 1
     ] [
         if (= $arg1 3) [ // high
-            //fsaa 0
+            fsaa 0
             minlod 100
             fpsrange 60 60
             watersubdiv 2
@@ -98,7 +98,7 @@ alias new_gfx_quality [
             shotline 1
         ] [
             if (= $arg1 2) [ // medium (DEFAULT)
-                //fsaa 0
+                fsaa 0
                 minlod 60
                 fpsrange 30 40
                 watersubdiv 4
@@ -122,7 +122,7 @@ alias new_gfx_quality [
                 gib 1
                 shotline 1
             ] [                 // low
-                //fsaa 0
+                fsaa 0
                 minlod 25
                 fpsrange 20 25
                 watersubdiv 16
