gfx detail settings
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3224 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -211,7 +211,7 @@ newmenu video
 menuitemtextinput "Screen width:			" "$scr_w" "scr_w $arg1"
 menuitemtextinput "Screen height:			" "$scr_h" "scr_h $arg1"
 
-menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 "Low Medium Good Best" "new_gfx_quality $arg1"
+menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 [Low Medium Good "Best (but slow)"] "new_gfx_quality $arg1"
 menuitem "" -1
 
 menuitemslider "View of field: " 90 120 "$fov" 2 "" "fov $arg1"
