fixed typo in a gamedescription... added comments on how to use domodifier while I was at it..
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3236 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -10,7 +10,6 @@ alias editent [
 
 // Auto-completions
 alias mapcomplete [complete $arg1 "packages/maps" cgz]
-
 mapcommands = "map tdm coop dm lms ts ctf pf lss osok tosok htf vip tktf ktf"
 loop i (listlen $mapcommands) [
     mapcomplete (at $mapcommands $i)
@@ -19,7 +18,6 @@ loop i (listlen $mapcommands) [
 complete demo "demos" dmo
 
 alias entcomplete [listcomplete $arg1 "light playerstart pistol ammobox grenades health armour akimbo mapmodel trigger ladder ctf-flag sound clip"]
-
 entcomplete newent
 
 // Game mode descriptions...
@@ -38,7 +36,7 @@ gamemodedesc 11 [Team One Shot, One Kill: Your team starts with 1hp, a sniper ri
 gamemodedesc 12 [Bot One-Shot, One Kill: You and the bots start with 1hp, a sniper rifle, a knife and no pickups. Survive with your sniper, or humiliate with your swiss steel.]
 gamemodedesc 13 [Hunt the Flag: Find the enemy flag, frag the flag bearer and collect the flag to score. Protect your own team flag.]
 gamemodedesc 14 [Team Keep the Flag: There is only one flag. Get the flag and keep it. You score one point every 15 seconds. If your teammate has the flag, protect him.]
-gamemodedesc 15 [Keep the Flag: Get the flag and keep it. You score one point every 15 seconds. Everybody is will want to destroy you!]
+gamemodedesc 15 [Keep the Flag: Get the flag and keep it. You score one point every 15 seconds. Everybody else will want to destroy you!]
 
 // "resetbinds" command.
 alias resetbinds [ exec config/resetbinds.cfg; echo "3All binds have been reset to default values!" ]
@@ -50,7 +48,6 @@ alias changeteam [
 ]
 
 // Mode/map-setting aliases.
-
 alias votemap [ mode $arg1; map $arg2 ]
 
 alias tdm   [ votemap 0 $arg1 ]
@@ -69,7 +66,6 @@ alias tktf  [ votemap 14 $arg1 ]
 alias ktf   [ votemap 15 $arg1 ]
 
 // Weapon switching/action utilities.
-
 alias primary [ weapon (currentprimary) ]
 alias secondary [ weapon 1 ]
 alias melee [ weapon 0 ]
@@ -87,9 +83,9 @@ alias quicknadethrow [
     onrelease [ sleep 1 [ if (= (curweapon) 6) [weapon (prevweapon)] ] ]
 ]
 
-loop i 8 [ alias (concatword altaction_ $i) quicknadethrow ] // quick nade throw is default
-alias altaction_4 [ zoom 1; onrelease [ zoom 0 ] ] // sniper
-alias altaction_6 [ attack ] // grenade 
+loop i 8 [ alias (concatword altaction_ $i) quicknadethrow ] // Quick nade throw is default
+alias altaction_4 [ zoom 1; onrelease [ zoom 0 ] ] // Sniper
+alias altaction_6 [ attack ] // Grenade 
 
 alias oldsens $sensitivity
 
@@ -106,11 +102,11 @@ alias zoom [
     ]
 ]
 
-//--------------------- editing -------------------------------
 
-// The below is for editing using your mouse wheel. See the page 1 of the 
-// map editing guide for details on what's used for what.
+alias delta_game_0 [ if (= $arg1 1) [ shiftweapon 1 ] [ shiftweapon -1 ] ]
+alias delta_spect_0 [ changefollowplayer $arg1 ]
 
+// Map editing using the mousewheel...
 alias modifier 0
 alias domodifier [ alias modifier $arg1; onrelease [ alias modifier 0 ] ]
 
@@ -120,18 +116,17 @@ alias universaldelta [
   ]
   (concatword delta _ $s _ $modifier)
 ]
-
-alias delta_edit_0 [ editheight $flrceil $arg1 ]
-alias delta_edit_1 [ if $flrceil [ vdelta $arg1 ] [ vdelta (- 0 $arg1) ] ]
-alias delta_edit_2 [ edittex $flrceil $arg1 ]
-alias delta_edit_3 [ edittex (+ $flrceil 1) $arg1 ]
-alias delta_edit_4 [ equalize $flrceil ]
-alias delta_edit_5 [ entproperty 0 $arg1 ]
-// End of using your mouse to edit
-// ------------------------------
-
-alias delta_game_0 [ if (= $arg1 1) [ shiftweapon 1 ] [ shiftweapon -1 ] ]
-alias delta_spect_0 [ changefollowplayer $arg1 ]
+// To utilize the below, you will need to bind "domodifier X" 
+// (replace X with the number of the delta_edit) to a key. To 
+// use them, simply hold the key that the "domodifier" is bound
+// to and then scroll backwards/forwards while looking at the
+// floor/ceiling.
+alias delta_edit_0 [ editheight $flrceil $arg1 ]				// Move cubes...
+alias delta_edit_1 [ if $flrceil [ vdelta $arg1 ] [ vdelta (- 0 $arg1) ] ]	// Change heightfielding...
+alias delta_edit_2 [ edittex $flrceil $arg1 ]					// Change floor/ceiling textures...
+alias delta_edit_3 [ edittex (+ $flrceil 1) $arg1 ]				// Change wall/upper-wall textures...
+alias delta_edit_4 [ equalize $flrceil ]					// Equalize floor/ceiling...
+alias delta_edit_5 [ entproperty 0 $arg1 ]					// Changes the frist value on entities...
 
 // HUD toggles
 alias toggleshowmap [ showmap 1; onrelease [ showmap 0 ] ]
