Much more appropriate bot numbers (why would you play BTDM if there are only 2 players?)... Less confusing bot numbering.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3237 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -86,24 +86,20 @@ alias genenemyitems [
 		alias numplayers (at $arg1 $i)
 		if (= $arg2 0) [ // DM
 			alias numplayers (- $numplayers 1) // don't count yourself as enemy
-			if (= $numplayers 1) [
-				alias menutext (concat $numplayers enemy)
-			] [
-				alias menutext (concat $numplayers enemies)
-			]
+			alias menutext (concat (+ $numplayers 1) players)
 		] [ // TDM
 			alias teamsize (div $numplayers 2)
-			alias menutext (concatword $teamsize on $teamsize)
+			alias menutext (concatword $teamsize vs $teamsize)
 		]
 		menuitem $menutext (concat "alias tmp_numbots" $numplayers "; showmenu botmaps")
 	]
 ]
 
 newmenu enemies
-genenemyitems "2 3 5 9 17 33" 0
+genenemyitems "2 4 8 12 16 24 32" 0
 
 newmenu "team enemies"
-genenemyitems "2 4 6 8 16 32" 1
+genenemyitems "4 8 12 16 24 32" 1
 
 newmenu "Creating bot waypoints"
 
