sniper scope crosshair menu (inside HUD settings)
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3248 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -1,6 +1,9 @@
 newmenu Crosshairs
 menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png)"
 
+newmenu "Sniper crosshairs"
+menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png) 4"
+
 newmenu Weapons
 
 menumdl weapons/assault/menu mapmodel 75 12
@@ -351,3 +354,4 @@ menuitemcheckbox "   Crosshair team-sign " "$crosshairteamsign" "crosshairteamsi
 menuitem "" -1
 menuitemslider "Crosshair size: " 0 50 "$crosshairsize" 5 "" "crosshairsize $arg1"
 menuitem "Change crosshair...				"	  "showmenu Crosshairs"
+menuitem "Change sniper-scope crosshair...		"	  [ showmenu "Sniper crosshairs" ]
