--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -1,9 +1,3 @@
-newmenu Crosshairs
-menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png)"
-
-newmenu "Sniper crosshairs"
-menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png) 4"
-
 newmenu Weapons
 
 menumdl weapons/assault/menu mapmodel 75 12
@@ -354,4 +348,17 @@ menuitemcheckbox "   Crosshair team-sign " "$crosshairteamsign" "crosshairteamsi
 menuitem "" -1
 menuitemslider "Crosshair size: " 0 50 "$crosshairsize" 5 "" "crosshairsize $arg1"
 menuitem "Change crosshair...				"	  "showmenu Crosshairs"
-menuitem "Change sniper-scope crosshair...		"	  [ showmenu "Sniper crosshairs" ]
+
+newmenu Crosshairs
+
+menuinit [ alias crosshairweapon "" ]
+menuitem "Select the weapon you would like to change the crosshair for..." -1
+menuitem "" -1
+menuitem "MTP-57 Assault Rifle"		      [ alias crosshairweapon 5; showmenu "Crosshair type" ]  
+menuitem "A-ARD/10 Submachine Gun"	      [ alias crosshairweapon 3; showmenu "Crosshair type" ] 
+menuitem "Precision Tech AD-81 Sniper Rifle"  [ alias crosshairweapon 4; showmenu "Crosshair type" ]  
+menuitem "V-19 Combat Shotgun"		      [ alias crosshairweapon 2; showmenu "Crosshair type" ]
+
+newmenu "Crosshair type"
+menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png) $crosshairweapon"
+
