made red dot default sniper crosshair
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3256 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -3,7 +3,7 @@
 
 name "unarmed"     		// Change your name!
 loadcrosshair default.png	// Choose another crosshair, see packages/misc/crosshairs/
-loadcrosshair dot.png 4	    // scope crosshair
+loadcrosshair red_dot.png 4 // scope crosshair
 skin 0				// Change your look.
 autoreload 1			// Reload the guns automatically by default.
 
