show crosshair image instead of filename
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3259 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -360,5 +360,5 @@ menuitem "Precision Tech AD-81 Sniper Rifle"  [ alias crosshairweapon 4; showmen
 menuitem "V-19 Combat Shotgun"		      [ alias crosshairweapon 2; showmenu "Crosshair type" ]
 
 newmenu "Crosshair type"
-menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png) $crosshairweapon"
+menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png) $crosshairweapon" 1
 
