option for setting default crosshair
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3262 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -354,6 +354,7 @@ newmenu Crosshairs
 menuinit [ alias crosshairweapon "" ]
 menuitem "Select the weapon you would like to change the crosshair for..." -1
 menuitem "" -1
+menuitem "Default (all weapons)"          [ alias crosshairweapon -1; showmenu "Crosshair type" ]
 menuitem "MTP-57 Assault Rifle"		      [ alias crosshairweapon 5; showmenu "Crosshair type" ]  
 menuitem "A-ARD/10 Submachine Gun"	      [ alias crosshairweapon 3; showmenu "Crosshair type" ] 
 menuitem "Precision Tech AD-81 Sniper Rifle"  [ alias crosshairweapon 4; showmenu "Crosshair type" ]  
