--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -352,7 +352,7 @@ menuitem "Change crosshair...				"	  "showmenu Crosshairs"
 newmenu Crosshairs
 
 menuinit [ alias crosshairweapon "" ]
-menuitem "Select the weapon you would like to change the crosshair for..." -1
+menuitem "Select the weapon you would like to change the crosshair for:" -1
 menuitem "" -1
 menuitem "Default (all weapons)"          [ alias crosshairweapon -1; showmenu "Crosshair type" ]
 menuitem "MTP-57 Assault Rifle"		      [ alias crosshairweapon 5; showmenu "Crosshair type" ]  
