make sure graphics slider sets stencilshadow var
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3270 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -70,6 +70,7 @@ alias new_gfx_quality [
         dynlight 1
         waterreflect 1
         stencilbits 8
+        stencilshadow 40
         dynshadow 40
         lighterror 1
         scorch 1
@@ -86,6 +87,7 @@ alias new_gfx_quality [
             dynlight 1
             waterreflect 1
             stencilbits 8
+            stencilshadow 40
             dynshadow 40
             lighterror 4
             scorch 1
@@ -108,8 +110,10 @@ alias new_gfx_quality [
                 ]
                 if (|| (glext "GL_EXT_stencil_two_side") (glext "GL_ATI_separate_stencil")) [
                     stencilbits 8
+                    stencilshadow 40
                 ] [
                     stencilbits 0
+                    stencilshadow 0
                 ]
                 dynshadow 40
                 lighterror 4
