--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -107,7 +107,7 @@ menuitem "" -1
 menuitem "Active Developers/Contributors" -1
 menuitem "-----------------------------------" -1
 menuitem "eihrul				Coder, OpenGL expert, Enet Library, Cube2 backporting." -1
-menuitem "RandumIdiot			Mapping, documentation, tester, clean-up crew." -1
+menuitem "RandumKiwi			Mapping, documentation, tester, clean-up crew." -1
 menuitem "Flowtron			Universal team member, additional code, admin, community chief." -1
 menuitem "stef				Bug fixes, additional code, server stuff, new modes." -1
 menuitem "Toca				Mapmodels, sounds, textures, other stuff." -1
