added gastank sound
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3289 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -557,7 +557,7 @@ mapsoundreset
 
 mapsound "./ambience/cavedrip.ogg" -1 		// 0
 mapsound "./ambience/distant_cars.ogg" -1	// 1
-mapsound "./ambience/hum01.ogg" 0 -1 		// 2
+mapsound "./ambience/hum01.ogg" -1 		// 2
 mapsound "./ambience/hum02.ogg" -1 		// 3
 mapsound "./ambience/night_crickets.ogg" -1	// 4
 mapsound "./ambience/water.ogg" -1 		// 5
@@ -590,3 +590,5 @@ mapsound "./ambience/t_wind.ogg" -1 		//30
 mapsound "./ambience/t_waterpipe01.ogg" -1	//31
 mapsound "./ambience/t_waterpipe02.ogg" -1	//32
 mapsound "./ambience/warningalarm01.ogg" -1	//33
+mapsound "./ambience/t_gastank.ogg" -1		//34
+
