updated sound list
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3293 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -591,4 +591,7 @@ mapsound "./ambience/t_waterpipe01.ogg" -1	//31
 mapsound "./ambience/t_waterpipe02.ogg" -1	//32
 mapsound "./ambience/warningalarm01.ogg" -1	//33
 mapsound "./ambience/t_gastank.ogg" -1		//34
-
+mapsound "./ambience/t_keyboard.ogg" 1		//35 play only once when user gets near a keyboard
+mapsound "./ambience/t_factory01.ogg" -1	//36
+mapsound "./ambience/t_vents.ogg" -1		//37
+mapsound "./ambience/t_waterfront.ogg" -1	//38
